addes discription to secrets route

--- a/k8s/tagalys_secrets.yml
+++ b/k8s/tagalys_secrets.yml
@@ -4,7 +4,7 @@ metadata:
   name: tagalys-secret
 type: Opaque
 stringData:
-  TAGALYS_SECRET: "I'm in config/secrets.yml"
+  TAGALYS_SECRET: "I'm in secrtes.yml but I'm referenced from /mnt/secret/TAGALYS_SECRET"
   DB_USER: "root"
   DB_NAME: "fakedb"
   DB_PASSWORD: ""
