--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ env:
     - SHA-$(git rev-parse HEAD)
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before-install:
-  - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
+  # - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud config set project <project id>
-  - gcloud config set compute/zone asia-south1-b
-  - gcloud container clusters get-credentials tagalys-cluster
+  - gcloud config set project robust-chess-234104
+  - gcloud config set compute/zone asia-south1-a
+  - gcloud container clusters get-credentials standard-cluster-1
   - $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
 deploy:
