--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ env:
 before-install:
   # - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
-  - source $HOME/google-cloud-sdk/path.bash.inc
+  - source $HOME/google-cloud-sdk/bin
+  # - export PATH=$PATH:$HOME/google-cloud-sdk/bin/
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project robust-chess-234104
