--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before-install:
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project robust-chess-234104
   - gcloud config set compute/zone asia-south1-a
-  - gcloud container clusters get-credentials standard-cluster-1
+  - gcloud container clusters get-credentials tagalys-cluster-1
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
 deploy:
