--- a/k8s/sql_server_deployment.yml
+++ b/k8s/sql_server_deployment.yml
@@ -64,7 +64,7 @@ spec:
             #     secretKeyRef:
             #       name: tagalys-secret
             #       key: MYSQL_ROOT_HOST
-          args: ["--default-authentication-plugin=mysql_native_password"]
+          args: ["--default-authentication-plugin=mysql_native_password","--ignore-db-dir=lost+found"]
 
 
 ---
