--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ before-install:
   # - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
   - gcloud components install kubectl
-  - source $HOME/google-cloud-sdk/bin
-  - export PATH=$PATH:$HOME/google-cloud-sdk/bin/
   - source $HOME/google-cloud-sdk/path.bash.inc
-  - export PATH=$PATH:$HOME/google-cloud-sdk/path.bash.inc
+  - export PATH=$PATH:/usr/local/share/google/google-cloud-sdk/bin/
+  - sudo ln -s /usr/local/share/google/google-cloud-sdk/bin/kubectl /usr/local/bin/kubectl
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project robust-chess-234104
