--- a/k8s/sql_server_deployment.yml
+++ b/k8s/sql_server_deployment.yml
@@ -29,7 +29,7 @@ spec:
             - containerPort: 3306
           volumeMounts:
             - name: sql-storage
-              mountPath: "/var/lib/mysql"
+              mountPath: "/var/lib/data"
             - name: secret-sql-volume
               mountPath: "/mnt/secret"
               readOnly: true
