--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before-install:
   - curl https://sdk.cloud.google.com | bash > /dev/null
   - gcloud components install kubectl
   - source $HOME/google-cloud-sdk/path.bash.inc
-  - export PATH=$PATH:/usr/local/share/google/google-cloud-sdk/bin/
+  - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.12.0/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
   - sudo ln -s /usr/local/share/google/google-cloud-sdk/bin/kubectl /usr/local/bin/kubectl
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
