--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,26 @@
-# sudo: required
-# services: 
-#   - docker
-# env:
-#   global:
-#     - SHA=$(git rev-parse HEAD)
-#     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
-# before-install:
-#   # - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
-#   - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
-#   - source /home/travis/google-cloud-sdk/path.bash.inc
-#   - gcloud --quiet version
-#   - gcloud --quiet components update
-#   - gcloud --quiet components beta update
-#   - gcloud --quiet components update kubectl
-#   - gcloud auth activate-service-account --key-file service-account.json
-#   - gcloud config set project robust-chess-234104
-#   - gcloud config set compute/zone asia-south1-a
-#   - gcloud container clusters get-credentials tagalys-cluster-1
-#   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-# deploy:
-#   provider: script
-#   script: bash ./deploy.sh
-#   on: 
-#     branch: master
-  
+sudo: required
+services: 
+	- docker
+env:
+	global:
+		- SHA=$(git rev-parse HEAD)
+		- CLOUDSDK_CORE_DISABLE_PROMPTS=1
+before_install:
+	- openssl aes-256-cbc -K $encrypted_6effac0bd6f9_key -iv $encrypted_6effac0bd6f9_iv -in service-accounts.json.enc -out service-accounts.json -d
+	- if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+	- source /home/travis/google-cloud-sdk/path.bash.inc
+	- gcloud --quiet version
+	- gcloud --quiet components update
+	# - gcloud --quiet components beta update
+	- gcloud --quiet components update kubectl
+	- gcloud auth activate-service-account --key-file service-account.json
+	- gcloud config set project tagalys-test
+	- gcloud config set compute/zone asia-south1-a
+	- gcloud container clusters get-credentials tagalys-test
+	- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+deploy:
+	provider: script
+	script: bash ./deploy.sh
+	on: 
+		branch: master
+	
