--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,8 @@ env:
 		- CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
 	- openssl aes-256-cbc -K $encrypted_6effac0bd6f9_key -iv $encrypted_6effac0bd6f9_iv -in service-accounts.json.enc -out service-accounts.json -d
-	- if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
 	- source /home/travis/google-cloud-sdk/path.bash.inc
-	- gcloud --quiet version
-	- gcloud --quiet components update
-	# - gcloud --quiet components beta update
-	- gcloud --quiet components update kubectl
+	- gcloud components update kubectl
 	- gcloud auth activate-service-account --key-file service-account.json
 	- gcloud config set project tagalys-test
 	- gcloud config set compute/zone asia-south1-a
