--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,23 @@
 sudo: required
-services: 
-	- docker
+services:
+  - docker
 env:
-	global:
-		- SHA=$(git rev-parse HEAD)
-		- CLOUDSDK_CORE_DISABLE_PROMPTS=1
+  global:
+    - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
-	- openssl aes-256-cbc -K $encrypted_6effac0bd6f9_key -iv $encrypted_6effac0bd6f9_iv -in service-accounts.json.enc -out service-accounts.json -d
-	- source /home/travis/google-cloud-sdk/path.bash.inc
-	- gcloud components update kubectl
-	- gcloud auth activate-service-account --key-file service-account.json
-	- gcloud config set project tagalys-test
-	- gcloud config set compute/zone asia-south1-a
-	- gcloud container clusters get-credentials tagalys-test
-	- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - openssl aes-256-cbc -K $encrypted_6effac0bd6f9_key -iv $encrypted_6effac0bd6f9_iv -in service-accounts.json.enc -out service-accounts.json -d
+  - curl https://sdk.cloud.google.com | bash > /dev/null;
+  - source $HOME/google-cloud-sdk/path.bash.inc
+  - gcloud components update kubectl
+  - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud config set project tagalys-test
+  - gcloud config set compute/zone asia-south1-a
+  - gcloud container clusters get-credentials tagalys-test
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
 deploy:
-	provider: script
-	script: bash ./deploy.sh
-	on: 
-		branch: master
-	
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
