--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - echo "Inside before_install"
+  - openssl aes-256-cbc -K $encrypted_f133a4599372_key -iv $encrypted_f133a4599372_iv -in service-accounts.json.enc -out service-accounts.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
